# ragcraft

./: .gitignore  ARCHITECTURE_TARGET.md  Dockerfile  README.github.md  README.hf.md  README.md  SOURCE_BUNDLE.txt  cypress.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  source_bundle.txt  streamlit_app.py
api/: README.md  main.py  pyproject.toml
api/src/application/auth/: username_rules.py
api/src/application/chat/: multimodal_prompt_hints.py
api/src/application/common/: __init__.py  pipeline_query_context.py  pipeline_query_log.py  safe_query_log.py  summary_recall_preview.py
api/src/application/dto/: auth.py  (+6 more)
api/src/composition/: __init__.py  application_container.py  auth_wiring.py  backend_composition.py  chat_rag_wiring.py  evaluation_wiring.py  wiring.py
api/tests/: conftest.py
api/tests/api/: README.md  test_auth_router.py  test_authenticated_principal_dependency.py  test_benchmark_export.py  test_core_routes.py  test_dependencies_api_surface.py  test_dependencies_no_streamlit.py  test_http_pipeline_e2e.py  test_ingestion_robustness.py  test_openapi_contract.py  test_serialization.py  test_system_routes.py  test_upload_adapter.py  test_user_avatar_io.py  test_users_router.py
api/tests/appli/: test_benchmark_metric_taxonomy.py  test_composition_root.py  test_manual_evaluation_result_roundtrip.py  test_memory_chat_transcript.py  test_performance_smoke.py  test_pipeline_latency.py  test_retrieval_filters.py  test_summary_document_fusion.py  test_summary_recall_execution_plan.py  test_wiring.py
api/tests/application_tests/: test_benchmark_metric_taxonomy.py  test_evaluation_display_text.py  test_ingestion_diagnostics.py  test_pipeline_latency.py  test_rag_inspect_answer_run.py  test_retrieval_settings_override_spec.py
api/tests/apps_api/: bearer_auth.py  test_authenticated_principal_dependency.py  test_core_routes.py  test_dependencies_api_surface.py  test_dependencies_no_streamlit.py  test_http_pipeline_e2e.py  test_serialization.py  test_upload_adapter.py  test_users_router.py
api/tests/architecture/: README.md  import_scanner.py  test_adapter_application_imports.py  test_application_chat_rag_boundary_ports.py  test_application_orchestration_purity.py  test_application_preview_dto_wire_only.py  test_composition_import_boundaries.py  test_deprecated_backend_and_gateway_guardrails.py  test_deprecated_backend_shim_guardrails.py  test_doc_cypress_scope.py  test_docs_transport_and_client_topology.py  test_fastapi_delivery_boundaries.py  test_fastapi_migration_guardrails.py  test_frontend_streamlit_services_entrypoint.py  test_frontend_structure.py  test_layer_boundaries.py  test_layer_import_rules.py  test_legacy_app_wrapper_removed.py  test_manual_evaluation_single_orchestrator.py  test_migration_regression_flows.py  test_no_dict_in_usecases.py  test_no_legacy_paths.py  test_no_rag_service_facade.py  test_orchestration_boundaries.py  test_orchestration_package_import_boundaries.py  test_repository_layout.py  test_repository_structure.py  test_required_tree.py
api/tests/bootstrap/: __init__.py  test_asgi_entrypoint.py
api/tests/composition/: test_auth_wiring_module.py
api/tests/domain/: test_benchmark_comparison.py  test_benchmark_failure_analysis.py  test_benchmark_failure_analysis_coercions.py  test_benchmark_math.py  test_benchmark_result_coerce.py  test_buffered_document_upload.py  test_judge_metrics_row.py  test_layout_grouping.py  test_multimodal_metrics.py  test_query_log_timestamp.py  test_retrieval_confidence.py  test_retrieval_filters_and_presets.py  test_retrieval_query_log_record.py  test_section_expansion_rules.py
api/tests/e2e/: benchmark_regression_checks.py  test_benchmark_regression_flow.py  test_benchmark_regression_thresholds.py  test_retrieval_quality_gate.py  test_smoke_upload_ingest_ask.py
api/tests/e2e_browser/: conftest.py  test_playwright_public_surface.py
api/tests/fixtures/: benchmark_results.py
api/tests/infra/: README.md  test_adaptive_retrieval_service.py  test_auth_credentials.py  test_auto_debug_service.py  test_benchmark_report_service.py  test_benchmark_result_helpers.py  test_chat_rag_wiring.py  test_contextual_compression_service.py  test_correlation_service.py  test_docstore_service.py  test_evaluation_flow_errors.py  test_evaluation_ndcg.py  test_evaluation_service.py  test_evaluation_service_citation_metrics.py  test_image_context_service.py  test_ingestion_service.py  test_layout_context_service.py  test_llm_judge_service.py  test_manual_evaluation_service.py  test_multimodal_metrics.py  test_multimodal_metrics_infra.py  test_project_service.py  test_project_settings_service.py  test_prompt_source_service.py  test_qa_dataset_generation_service.py  test_qa_dataset_repository.py  test_qa_dataset_service_persistence.py  test_query_intent_service.py  test_query_log_service.py  test_reranking_service.py  test_retrieval_settings_tuner.py  test_section_retrieval_service.py  test_semantic_similarity_service.py  test_sqlite_docstore.py  test_table_parsing_service.py  test_vectorstore_service.py
api/tests/infrastructure_tests/: README.md  test_adaptive_retrieval_service.py  test_answer_citation_metrics_service.py  test_auth_credentials.py  test_benchmark_comparison_service.py  test_benchmark_result_helpers.py  test_chat_rag_wiring.py  test_confidence_service.py  test_evaluation_service.py  test_evaluation_service_citation_metrics.py  test_explainability_service.py  test_failure_analysis_service.py  test_hybrid_retrieval_metadata_filters.py  test_ingestion_service.py  test_layout_context_service.py  test_manual_evaluation_service.py  test_process_project_chain_cache.py  test_project_settings_service.py  test_prompt_builder_service.py  test_qa_dataset_generation_service.py  test_qa_dataset_repository.py  test_query_intent_service.py  test_query_log_service.py  test_table_qa_service.py
api/tests/reliability/: __init__.py  conftest.py  test_app_boot.py  test_auth_flow.py  test_chat_flow.py  test_e2e_flow.py
api/tests/support/: backend_container.py  coverage_folder_summary.py
(+1233 files in other folders)
