# RAGCraft — project metadata and tool configuration (dependencies remain in requirements.txt).
# Run from repo root with PYTHONPATH=. (or install in editable mode if you add a build backend later).

[project]
name = "ragcraft"
version = "0.1.0"
description = "RAG workspace with Clean Architecture layout"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["api/src", "frontend/src"]

[tool.ruff.lint]
select = [
  "E4",   # import-related syntax
  "E7",
  "E9",   # runtime syntax errors
  "F",    # pyflakes (undefined names, unused imports, …)
  "I",    # isort
  "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = [
    "domain",
    "application",
    "infrastructure",
    "composition",
    "interfaces",
    "pages",
    "components",
    "services",
    "state",
    "viewmodels",
    "utils",
]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py311"]

# Incremental typing: full strict mode is not enforced repo-wide yet (legacy dict shapes in places).
# Use:  PYTHONPATH=api/src python -m mypy --config-file=pyproject.toml -p domain
# Prefer tightening ports/DTOs/use-case signatures over blanket ignores.
[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Tests live under api/tests and frontend/tests; source roots are api/src and frontend/src.
[tool.pytest.ini_options]
testpaths = ["api/tests", "frontend/tests"]
pythonpath = ["api/src", "frontend/src", "api/tests"]
markers = [
    "architecture: optional pytest filter for layering guards (primary CI gate is the path api/tests/architecture via scripts/validate_architecture.sh)",
]
